# setup.cfg
[metadata]
name = locker_server
version = 1.0.0
description = Locker Server API
long_description_content_type = 'text/markdown'
long_description = file: README.md
url = https://cystack.net
author = CyStack
author_email = contact@locker.io
keywords = django, vault management, security
# license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Beta
    Framework :: Django
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.12
install_requires =
    asgiref == 3.11.0
    sqlparse == 0.5.5
    pytz == 2025.2
    bson == 0.5.10

    Django == 5.2.11
    django-cors-headers == 4.9.0
    djangorestframework == 3.16.1
    django-redis == 6.0.0
    django-dotenv == 1.4.2
    django-rq == 3.2.2

    mysqlclient == 2.2.7
    redis == 7.1.0
    rq == 2.6.1

    gunicorn == 23.0.0
    gunicorn[gthread]

    channels==4.3.2
    channels-redis==4.3.0
    daphne==4.2.1

    dependency-injector == 4.48.3

    PyJWT == 2.10.1

    schedule == 1.2.2

    requests == 2.32.5

    geoip2 == 5.2.0

    pyotp == 2.9.0

    user_agents == 2.2.0

    cryptography == 46.0.5

    pyhumps == 3.8.0

    boto3 == 1.42.30
    botocore == 1.42.30

    dnslib == 0.9.26
    dnspython == 2.8.0

    sendgrid == 6.12.5
    Jinja2 == 3.1.6

    tldextract == 5.3.1

    gspread == 6.2.1
    google-auth-oauthlib == 1.2.4
    google-api-python-client == 2.187.0
    firebase_admin == 7.1.0

    beautifulsoup4 == 4.14.3

    stripe == 14.2.0

    webauthn == 2.7.0

    XlsxWriter == 3.2.9

    Pillow == 12.1.0

    notion-client == 2.7.0

    amqpstorm == 2.11.1

    # cffi == 1.15.1
    # slack_sdk == 3.0.0rc1
    # pika == 1.3.0
    # pandas == 2.2.1
    # httpx == 0.27.0


[options.packages.find]
exclude =
    server_config
	server_config.*
    tests
	tests.*
    venv
    projectenv
    *.sqlite3